# adamant

./: at-syntax.fish
admt/: .gitignore  README.md  pyproject.toml
admt/src/: cli.py  deco.py  lib.py  main.py
doc/example_architecture/background_component/: component-background_component-implementation.adb
doc/example_architecture/example_component/: component-example_component-implementation.adb
docker/: docker-compose.yml
env/: activate  redo_completion.sh
redo/rules/: build_what_predefined.py
src/components/ccsds_command_depacketizer/: component-ccsds_command_depacketizer-implementation.adb
src/components/command_sequencer/: component-command_sequencer-implementation.adb
src/components/cpu_monitor/: component-cpu_monitor-implementation.adb
src/components/event_limiter/: component-event_limiter-implementation.adb
src/components/event_packetizer/: component-event_packetizer-implementation.adb
src/components/fault_correction/: component-fault_correction-implementation.adb
src/components/memory_manager/: component-memory_manager-implementation.adb
src/components/memory_packetizer/: component-memory_packetizer-implementation.adb
src/components/pid_controller/: component-pid_controller-implementation.adb
src/components/product_packetizer/: component-product_packetizer-implementation.adb
src/components/queue_monitor/: component-queue_monitor-implementation.adb
src/components/sequence_store/: component-sequence_store-implementation.adb
src/components/stack_monitor/: component-stack_monitor-implementation.adb
(+30 files in other folders)
